add game name and result container

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 
 <body>
     <div class="container">
+        <h1>Tic Tac Toe!</h1>
         <div class="board">
+
+        </div>
+        <div class="result-container">
 
         </div>
     </div>
